--- a/src/pages/certificate/CertificateScreen.css
+++ b/src/pages/certificate/CertificateScreen.css
@@ -4,8 +4,9 @@
 }
 
 .blogpost-img-container img {
+	border: 1px solid gray;
 	margin: 0 auto;
-	width: 80%;
+	width: 100%;
 }
 
 .blogpost-main-container {
