--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
 	max-width: 980px;
 	margin: auto;
 }
+
+.error-screen {
+	display: flex;
+	justify-content: center;
+}
+
+.error-screen i {
+	color: lightseagreen;
+}
