--- a/src/pages/home/HomeScreen.css
+++ b/src/pages/home/HomeScreen.css
@@ -8,7 +8,7 @@
 	display: grid;
 	grid-template-columns: 1fr 4fr 1fr;
 	height: 100%;
-	background-image: url("../../assets/img/Cover.jpg");
+	background-image: url("../../assets/img/Cover.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -24,8 +24,10 @@
 
 .Home-main-text {
 	/* font-family: "Roboto Mono", monospace; */
-	font-size: 30px;
+	font-size: 35px;
 	font-weight: 700;
+	text-shadow: 2px 0 0 black, -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black,
+		1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 	letter-spacing: 5px;
 	color: black;
 	text-align: center;
