Adding more certificates link and GCP link updated

--- a/src/pages/knowledge/KnowledgeScreen.css
+++ b/src/pages/knowledge/KnowledgeScreen.css
@@ -4,8 +4,18 @@
 	display: grid;
 }
  */
-h4 {
+.post-container h4 {
 	text-align: center;
+}
+
+.extra-info a {
+	color: #ebba16;
+	font-weight: 700;
+	text-decoration: underline;
+}
+
+.extra-info a:hover {
+	color: yellowgreen;
 }
 
 .blogs-news-container {
